fix layout bugs

--- a/CardGame/css/bootstrap.css
+++ b/CardGame/css/bootstrap.css
@@ -9,7 +9,7 @@
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
-  --red: #dc3545;
+  --red: rgb(220, 53, 69);
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
@@ -20,7 +20,7 @@
   --gray-dark: #343a40;
   --primary: #007bff;
   --secondary: #868e96;
-  --success: #28a745;
+  --success: rgb(40, 167, 69);
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
